<resources>
    <string name="app_name">BOTP</string>
    <string name="title_activity_home_activity">BOTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BOTP</string>
    <string name="nav_header_subtitle">oscarngombo@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_expense">Expenses</string>
    <string name="menu_income">Income</string>
    <string name="menu_planner">Day Planner</string>
    <string name="menu_tools">BOTP Tip</string>
    <string name="menu_share">Share APP</string>
    <string name="menu_Rate">Rate App</string>
    <string name="menu_why">Why Ads</string>
    <string name="navigation_draw_open" />
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="outsmart_your_self_everyday">Outsmart your self everyday</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="filter_title_oscar">Oscar</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="contact">Contact</string>
    <string name="transaction">Transactions</string>
    <string name="interact">Interact</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="logo">Logo</string>
</resources>
