<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Signup">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginTop="100dp"
        android:baselineAligned="false"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/group" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/et_bg"
        android:baselineAligned="false"
        android:drawableStart="@drawable/user"
        android:drawableLeft="@drawable/user"
        android:fontFamily="sans-serif-light"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType=""
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_bg"
        android:baselineAligned="false"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:fontFamily="sans-serif-light"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType=""
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/txtConfPass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et_bg"
        android:baselineAligned="false"
        android:drawableStart="@drawable/lock"
        android:drawableLeft="@drawable/lock"
        android:fontFamily="sans-serif-light"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType=""
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="15sp"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="200dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_bg"
        android:baselineAligned="false"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/viewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login"
            android:textColor="#37124B" />
    </LinearLayout>


</LinearLayout>