<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="124dp"
            android:layout_marginLeft="124dp"
            android:layout_marginTop="102dp"
            android:layout_marginEnd="127dp"
            android:layout_marginRight="127dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/group"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView_logo"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/txtv1"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="117dp"
                android:layout_marginLeft="117dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="85dp"
                android:layout_marginRight="85dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtQuote"
                android:layout_width="246dp"
                android:layout_height="49dp"
                android:layout_below="@+id/txtv1"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:fontFamily="cursive"
                android:text="@string/outsmart_your_self_everyday"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/lineLay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtQuote"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/username"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/EdittxtUser"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:autofillHints=""
                        android:background="@drawable/et_bg"
                        android:baselineAligned="false"
                        android:drawableStart="@drawable/user"
                        android:drawableLeft="@drawable/user"
                        android:fontFamily="sans-serif-light"
                        android:inputType=""
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        tools:targetApi="o"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/password"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/Edittxtpassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@drawable/lock"
                        android:background="@drawable/et_bg"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:inputType="textPassword"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:autofillHints="" tools:targetApi="o"
                        android:drawableStart="@drawable/lock"
                        tools:ignore="LabelFor" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineLay1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_forgot_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/forgot_password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</RelativeLayout>